# kmeans

./: .gitignore  README.md  points.json  results
Pharo4.0/: KMeans.st
c/: .compile.sh.swp  compile.sh  hashmap.c  kmeans.c  kmeans.h  main.c  point.c
chapel/: Makefile  main.chpl
clojure/: project.clj
clojure/src/clj/kmeans/: algo.clj  benchmark.clj
cpp/: .gitignore  Point.cpp  Point.h  benchmark.cpp  biicode.conf  kmeans.cpp  kmeans.h
crystal/: .gitignore  kmeans.cr
cuda/: CMakeLists.txt  kmeans.out  makefile
cuda/src/: config.h  configurations.h  hashmap.c  kmeans.c  kmeans.cu  kmeans.h  main.cu  point.c  point.cu  point.h
d/: main.d
elixir/: kmeans.ex  main.exs
erlang/: kmeans.erl  main.erl
factor/kmeans/: kmeans.factor
factor/kmeans/benchmark/: benchmark.factor
fsharp/: .gitignore  Makefile  kmeans.fs  main.fs  paket.dependencies
go/: main.go
haskell/: Kmeans.hs  Main.hs  Point.hs  kmeans.cabal
java/: build.sbt  pom.xml
java/src/main/java/: Entry.java  KMeans.java  Point.java
java8/: pom.xml
java8/src/main/java/com/example/: KMeans.java  Main.java  Point.java
julia/: kmeans.jl
kotlin/: pom.xml
kotlin/src/main/java/: kmeans.kt
kotlin/src/main/java/com/example/: KMeans.kt  Main.kt  Point.kt
kotlin/src/main/kotlin/com/example/: Main.kt  Point.kt
lisp/: kmeans.lisp  readme.txt  run-sbcl.sh
lua/: kmeans.lua
nim/: algo.nim  benchmark.nim
node/: kmeans.js  package.json
ocaml/: kmeans.ml  kmeans.mli  main.ml  point.ml
opencl/: .gitignore  kmeans.cl  kmeans.nim  kmeans.nimble  point.h  point.nim  util.nim
openmp/: kmeans  makefile
openmp/src/: config.h  configurations.h  hashmap.c  hashmap.h  kmeans.c  kmeans.h  main.c  point.c  point.h
parasail/: benchmark.psl  kmeans.psl  point.psl
perl/: kmeans.pl
pharo3/: KMeans.st
pony/: Makefile  main.pony
pony/kmeans/: kmeans.pony  main.pony  point.pony
python/: kmeans.py
ruby/: kmeans.rb
rust/: Cargo.toml
rust/src/: algo.rs  kmeans.rs  lib.rs  main.rs  point.rs
rust/src/algo/: mod.rs
rust/src/point/: mod.rs
scala/: build.sbt
scala-js/: build.sbt
scala-js/src/main/scala/kmeans/: Main.scala
scala-native/: build.sbt
scala-native/project/: plugins.sbt
scala-native/src/main/scala/kmeans/: Algo.scala  Main.scala  native.scala
scala/src/main/scala/kmeans/: Algo.scala  Generator.scala  IO.scala  Main.scala
stanza/: compile.sh  kmeans.stanza  kmeansutils.c
swift/: kmeans.swift  main.swift
x10/: CJson.x10  KMeans.java  KMeans.x10  Main.java  Main.x10  Makefile  RichPoint.java  RichPoint.x10  jsonRead.cc  jsonRead.h  jsonRead.java
